--- a/openapi/schemas/Tag.yaml
+++ b/openapi/schemas/Tag.yaml
@@ -2,6 +2,7 @@ type: object
 required: ["tagConfigurationId"]
 properties:
   tagConfigurationId:
-    type: "string"
+    type: "integer"
+    format: "int64"
   value:
     type: "string"
