--- a/openapi/schemas/ImportRegistrationRequest.yaml
+++ b/openapi/schemas/ImportRegistrationRequest.yaml
@@ -3,9 +3,11 @@ items:
   required: ["userId", "taskId", "date", "duration", "tags"]
   properties:
     userId:
-      type: "string"
+      type: "integer"
+      format: "int64"
     taskId:
-      type: "string"
+      type: "integer"
+      format: "int64"
     date:
       type: "string"
       format: "date"
