--- a/openapi/schemas/TagTimeRegistrationRequest.yaml
+++ b/openapi/schemas/TagTimeRegistrationRequest.yaml
@@ -2,8 +2,10 @@ type: "object"
 required: ["timeRegistrationId", "tagConfigurationId"]
 properties:
   timeRegistrationId:
-    type: "string"
+    type: "integer"
+    format: "int64"
   tagConfigurationId:
-    type: "string"
+    type: "integer"
+    format: "int64"
   value:
     type: "string"
