--- a/openapi/schemas/TaskCreateResponse.yaml
+++ b/openapi/schemas/TaskCreateResponse.yaml
@@ -3,7 +3,8 @@ items:
   required: ["taskId", "name"]
   properties:
     taskId:
-      type: "string"
+      type: "integer"
+      format: "int64"
     name:
       type: "string"
       description: "The name of the task"
