--- a/openapi/schemas/admin/TagTaskMappingCreateRequest.yaml
+++ b/openapi/schemas/admin/TagTaskMappingCreateRequest.yaml
@@ -2,9 +2,11 @@ type: "object"
 required: ["tagConfigurationId", "taskId", "relation"]
 properties:
   tagConfigurationId:
-    type: "string"
+    type: "integer"
+    format: "int64"
   taskId:
-    type: "string"
+    type: "integer"
+    format: "int64"
   relation:
     type: "string"
     description: "The type of relation between the task and tag."
