--- a/openapi/time-registration.yaml
+++ b/openapi/time-registration.yaml
@@ -49,7 +49,8 @@ put:
       description: "The id of the time registration to update"
       required: true
       schema:
-        type: "string"
+        type: "integer"
+        format: "int64"
   requestBody:
     required: true
     content:
