--- a/openapi/tagTaskMapping.yaml
+++ b/openapi/tagTaskMapping.yaml
@@ -1,6 +1,6 @@
 post:
   tags:
-    - "TagTaskMapping"
+    - "Admin"
   operationId: "createNewTagTaskMapping"
   description: "Creates a new relation between a task and a tag configuration"
   requestBody:
