--- a/openapi/time-registration.yaml
+++ b/openapi/time-registration.yaml
@@ -1,6 +1,6 @@
 get:
   tags:
-  - "Time registration"
+  - "User"
   operationId: "getTimeRegistrationsForUser"
   description: "Returns time registrations for a user"
   responses:
@@ -16,7 +16,7 @@ get:
       $ref: "./responses/UnauthorizedError.yaml"
 post:
   tags:
-  - "Time registration"
+  - "User"
   operationId: "addTimeRegistrationForUser"
   description: "Registers time for a user"
   requestBody:
@@ -40,7 +40,7 @@ post:
       $ref: "./responses/UnauthorizedError.yaml"
 put:
   tags:
-    - "Time registration"
+    - "User"
   operationId: "updateTimeRegistrationForUser"
   description: "Updates the specified time registration"
   parameters:
