--- a/openapi/trireg2.yaml
+++ b/openapi/trireg2.yaml
@@ -16,22 +16,10 @@ servers:
   - url: "http://0.0.0.0:8080"
     description: Local development server
 tags:
-  - name: "Export"
-    description: "Tag for operations related to exporting time registrations to an external system"
-  - name: "Import"
-    description: "Tag for operations related to importing time registrations"
-  - name: "Login"
-    description: "Tag for operations related to logging into the service through a browser"
-  - name: "TagConfigurations"
-    description: "Tag for CRUD operations related to the configuration of tags"
-  - name: "TagTaskMapping"
-    description: "Tag for CRUD operations related to the configuration of the relation between tasks and tag configurations"
-  - name: "Tagging"
-    description: "Tag for CRUD operations related to tagging time registrations"
-  - name: "Tasks"
-    description: "Tag for CRUD operations related to the configuration tasks"
-  - name: "Time registration"
-    description: "Tag for CRUD operations related to time registrations"
+  - name: "User"
+    description: "Tag for operations related user API"
+  - name: "Admin"
+    description: "Tag for operations related admin API"
 paths:
   /login:
     $ref: login.yaml
