--- a/openapi/schemas/user/ImportRegistrationRequest.yaml
+++ b/openapi/schemas/user/ImportRegistrationRequest.yaml
@@ -12,7 +12,7 @@ items:
       type: "string"
       format: "date"
     duration:
-      $ref: Duration.yaml
+      $ref: ../Duration.yaml
     tags:
       type: array
       items:
