--- a/openapi/user/import.yaml
+++ b/openapi/user/import.yaml
@@ -4,19 +4,19 @@ post:
   operationId: "importTimeRegistrations"
   description: "Imports the given time registrations into the system"
   requestBody:
-    description: "A JSON object containing time-registration information"
+    description: "A JSON object containing time registration information to be imported"
     required: true
     content:
       application/json:
         schema:
-          $ref: "./schemas/ImportRegistrationRequest.yaml"
+          $ref: "./schemas/user/ImportRegistrationRequest.yaml"
   responses:
     "200":
       description: "OK"
       content:
         application/json:
           schema:
-            $ref: "./schemas/ImportRegistrationResponse.yaml"
+            $ref: "./schemas/user/ImportRegistrationResponse.yaml"
     "401":
       $ref: "./responses/UnauthorizedError.yaml"
     "502":
