--- a/openapi/user/login.yaml
+++ b/openapi/user/login.yaml
@@ -2,7 +2,7 @@ get:
   tags:
     - "Login"
   operationId: "login"
-  description: "Redirects to OpenId login flow"
+  description: "Redirects to OpenId login flow. Only to be used when logging into the service through a web browser"
   responses:
     "302":
       description: "Redirection to a login flow for the OpenId login provider. After completing the flow, the user will be redirected back to the application with a valid session token."
