--- a/openapi/admin/tagConfiguration.yaml
+++ b/openapi/admin/tagConfiguration.yaml
@@ -1,6 +1,6 @@
 get:
   tags:
-    - "TagConfigurations"
+    - "TagConfiguration"
   operationId: "getTagConfigurations"
   description: "Gets all tag configurations that are applicable to the provided task"
   parameters:
@@ -19,18 +19,18 @@ get:
         type: "boolean"
   responses:
     "200":
-      description: "List of valid tag configurations for the requested task"
+      description: "List of valid tag configurations for the specified task"
       content:
         application/json:
           schema:
-            $ref: "./schemas/TagConfigurationResponse.yaml"
+            $ref: "./schemas/admin/TagConfigurationResponse.yaml"
     "401":
       $ref: "./responses/UnauthorizedError.yaml"
     "404":
       description: "Unable to find tag configurations for the specified task (No task with specified taskId exists)"
 post:
   tags:
-    - "TagConfigurations"
+    - "TagConfiguration"
   operationId: "createTagConfiguration"
   description: "Creates a new tag configuration"
   requestBody:
@@ -47,7 +47,7 @@ post:
           schema:
             type: "string"
     "400":
-      description: "Request contains invalid data and the tag configuration was not created"
+      description: "Request contains invalid data. The tag configuration was not created"
       content:
         text/plain:
           schema:
@@ -81,7 +81,7 @@ put:
           schema:
             type: "string"
     "400":
-      description: "Request contains invalid data and the tag configuration was not updated"
+      description: "Request contains invalid data. The tag configuration was not updated"
       content:
         text/plain:
           schema:
