--- a/openapi/admin/tagTaskMapping.yaml
+++ b/openapi/admin/tagTaskMapping.yaml
@@ -17,7 +17,7 @@ post:
           schema:
             type: "string"
     "400":
-      description: "Request contains invalid data and the TagTask mapping could not be created"
+      description: "Request contains invalid data. The TagTask mapping could not be created"
       content:
         text/plain:
           schema:
