--- a/openapi/user/active-task-registrations.yaml
+++ b/openapi/user/active-task-registrations.yaml
@@ -40,4 +40,4 @@ get:
           schema:
             type: string
     "401":
-      $ref: "./responses/UnauthorizedError.yaml"
+      $ref: "../responses/UnauthorizedError.yaml"
