--- a/openapi/admin/tagTaskMapping.yaml
+++ b/openapi/admin/tagTaskMapping.yaml
@@ -8,7 +8,7 @@ post:
     content:
       application/json:
         schema:
-          $ref: "./schemas/admin/TagTaskMappingCreateRequest.yaml"
+          $ref: "../schemas/admin/TagTaskMappingCreateRequest.yaml"
   responses:
     "200":
       description: "TagTask mapping successfully created"
@@ -23,4 +23,4 @@ post:
           schema:
             type: "string"
     "401":
-      $ref: "./responses/UnauthorizedError.yaml"
+      $ref: "../responses/UnauthorizedError.yaml"
