--- a/openapi/schemas/user/TimeRegistrationResponse.yaml
+++ b/openapi/schemas/user/TimeRegistrationResponse.yaml
@@ -18,6 +18,6 @@ properties:
     type: "string"
     format: "date"
   duration:
-    $ref: Duration.yaml
+    $ref: ../Duration.yaml
   status:
     type: "string"
