--- a/openapi/user/export.yaml
+++ b/openapi/user/export.yaml
@@ -31,6 +31,6 @@ post:
             Example#1:
               value: "Time registrations exported successfully"
     "401":
-      $ref: "./responses/UnauthorizedError.yaml"
+      $ref: "../responses/UnauthorizedError.yaml"
     "502":
-      $ref: "./responses/BadGateway.yaml"
+      $ref: "../responses/BadGateway.yaml"
