--- a/openapi/user/import.yaml
+++ b/openapi/user/import.yaml
@@ -18,6 +18,6 @@ post:
           schema:
             $ref: "./schemas/user/ImportRegistrationResponse.yaml"
     "401":
-      $ref: "./responses/UnauthorizedError.yaml"
+      $ref: "../responses/UnauthorizedError.yaml"
     "502":
-      $ref: "./responses/BadGateway.yaml"
+      $ref: "../responses/BadGateway.yaml"
