--- a/openapi/user/tag.yaml
+++ b/openapi/user/tag.yaml
@@ -19,13 +19,13 @@ get:
           schema:
             type: array
             items:
-              $ref: "./schemas/user/TagTimeRegistrationResponse.yaml"
+              $ref: "../schemas/user/TagTimeRegistrationResponse.yaml"
     "401":
-      $ref: "./responses/UnauthorizedError.yaml"
+      $ref: "../responses/UnauthorizedError.yaml"
     "404":
       description: "Unable to find a time registration with the specified timeRegistrationId"
     "502":
-      $ref: "./responses/BadGateway.yaml"
+      $ref: "../responses/BadGateway.yaml"
 post:
   tags:
     - "Tag"
@@ -37,7 +37,7 @@ post:
     content:
       application/json:
         schema:
-          $ref: "./schemas/user/TagTimeRegistrationRequest.yaml"
+          $ref: "../schemas/user/TagTimeRegistrationRequest.yaml"
   responses:
     "200":
       description: "Tag was successfully added to the time registration"
@@ -46,13 +46,13 @@ post:
           schema:
             type: "string"
     "401":
-      $ref: "./responses/UnauthorizedError.yaml"
+      $ref: "../responses/UnauthorizedError.yaml"
     "400":
       description: "Tag was not added to the registration due to an error with the request"
     "404":
       description: "No time registration was found to tag"
     "502":
-      $ref: "./responses/BadGateway.yaml"
+      $ref: "../responses/BadGateway.yaml"
 put:
   tags:
     - "Tag"
@@ -82,7 +82,7 @@ put:
     "400":
       description: "The updated tag information yields an invalid tag"
     "401":
-      $ref: "./responses/UnauthorizedError.yaml"
+      $ref: "../responses/UnauthorizedError.yaml"
     "404":
       description: "The specified tag was not found"
 delete:
@@ -106,6 +106,6 @@ delete:
           schema:
             type: "string"
     "401":
-      $ref: "./responses/UnauthorizedError.yaml"
+      $ref: "../responses/UnauthorizedError.yaml"
     "404":
       description: "The requested tag was not found and could not be deleted"
