--- a/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
+++ b/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
@@ -28,4 +28,5 @@ items:
           duration:
             $ref: ../Duration.yaml
           status:
-            $ref: ../Status.yaml
+            type: "string"
+            #$ref: ../Status.yaml
