--- a/openapi/schemas/user/TimeRegistrationUpdateRequest.yaml
+++ b/openapi/schemas/user/TimeRegistrationUpdateRequest.yaml
@@ -7,4 +7,13 @@ properties:
     $ref: ../Duration.yaml
   status:
     type: "string"
-    #$ref: ../Status.yaml
+    description: "Describes the status of the time registration"
+    nullable: true
+    enum:
+      - "PENDING"
+      - "VALID"
+      - "INVALID"
+      - null
+    default: null
+        #type: "string"
+        #$ref: ../Status.yaml
