--- a/openapi/schemas/Status.yaml
+++ b/openapi/schemas/Status.yaml
@@ -1,6 +1,8 @@
 type: "string"
-description: "Describes the status of the time registration"
-enum:
-  - PENDING
-  - VALID
-  - INVALID
+  description: "Describes the status of the time registration"
+  nullable: true
+  enum:
+    - "PENDING"
+    - "VALID"
+    - "INVALID"
+    - null
