--- a/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
+++ b/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
@@ -28,5 +28,4 @@ items:
           duration:
             $ref: ../Duration.yaml
           status:
-            type: "string"
-            #$ref: ../Status.yaml
+            $ref: ../Status.yaml
