--- a/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
+++ b/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
@@ -28,9 +28,14 @@ items:
           duration:
             $ref: ../Duration.yaml
           status:
-            type: "string"
-            description: "Describes the status of the time registration"
-            enum:
-              - "PENDING"
-              - "VALID"
-              - "INVALID"
+            $ref: '#/components/schemas/Status'
+             
+components:
+  schemas:
+    Status:
+      description: "Describes the status of the time registration"
+      type: string
+      enum:
+        - "PENDING"
+        - "VALID"
+        - "INVALID"
