--- a/openapi/schemas/user/TimeRegistrationResponse.yaml
+++ b/openapi/schemas/user/TimeRegistrationResponse.yaml
@@ -20,7 +20,7 @@ properties:
   duration:
     $ref: ../Duration.yaml
   status:
-    $ref: '#/components/schemas/Status'
+    $ref: "#/components/schemas/Status"
 
 components:
   schemas:
