--- a/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
+++ b/openapi/schemas/user/TimeRegistrationsByTaskResponse.yaml
@@ -28,14 +28,14 @@ items:
           duration:
             $ref: ../Duration.yaml
           status:
-            $ref: '#/components/schemas/Status'
+            $ref: "#/components/schemas/Status"
              
-components:
-  schemas:
-    Status:
-      description: "Describes the status of the time registration"
-      type: string
-      enum:
-        - "PENDING"
-        - "VALID"
-        - "INVALID"
+  components:
+    schemas:
+      Status:
+        description: "Describes the status of the time registration"
+        type: string
+        enum:
+          - "PENDING"
+          - "VALID"
+          - "INVALID"
