--- a/openapi/admin/tagConfiguration.yaml
+++ b/openapi/admin/tagConfiguration.yaml
@@ -23,9 +23,9 @@ get:
       content:
         application/json:
           schema:
-            $ref: "./schemas/admin/TagConfigurationResponse.yaml"
+            $ref: "../schemas/admin/TagConfigurationResponse.yaml"
     "401":
-      $ref: "./responses/UnauthorizedError.yaml"
+      $ref: "../responses/UnauthorizedError.yaml"
     "404":
       description: "Unable to find tag configurations for the specified task (No task with specified taskId exists)"
 post:
