--- a/openapi/user/active-task-registrations.yaml
+++ b/openapi/user/active-task-registrations.yaml
@@ -1,6 +1,6 @@
 get:
   tags:
-    - "Time registration"
+    - "TimeRegistration"
   operationId: "getTaskTimeRegistrationsOverview"
   description: "Returns time registrations for a user grouped by task"
   parameters:
