--- a/openapi/user/time-registration.yaml
+++ b/openapi/user/time-registration.yaml
@@ -5,7 +5,7 @@ get:
   description: "Returns time registrations that belongs to a user"
   responses:
     "200":
-      description: "List of time registrations for a user"
+      description: "List of time registrations for the user"
       content:
         application/json:
           schema:
